Wrote some more

--- a/_main.Rmd
+++ b/_main.Rmd
@@ -4,6 +4,7 @@ subtitle: "From the Algebra of Graphics, Statistics, and Interaction to Practica
 author: "Adam Bartonicek"
 site: bookdown::bookdown_site
 documentclass: book
+classoption: openany
 always_allow_html: true
 output:
   bookdown::gitbook:
@@ -25,7 +26,7 @@ header-includes:
 
 Interactive data visualization has become a staple of modern data presentation. However, creating rich interactive figures still remains challenging, and widely available interactive data visualization systems often offer only limited support for many valuable interactive features. This implementation gap may stem from a subtle yet profound issue: what we can *do* with a figure is fundamentally determined by what the figure *is*. Graphs are not mere images; they are visual representations of structured information. Consequently, interactive features must align with the mathematical properties of the data they represent. Yet, this is view clashes with the dominant, independence-based approach to building data visualization systems. This approach, popularized by the Grammar of Graphics [@wilkinson2012], attempts to treat graphics, statistics, and interaction as independent, modular components.
 
-In this thesis, I argue that the independence model, despite many advantages, is fundamentally inadequate for fully understanding graphics, particularly when interaction comes into play. Visualization components are not independent, but instead deeply interconnected. Throughout this work, I explore this interconnectedness, the challenges is poses for interactive data visualization systems, and propose an alternative model based on some fundamental concepts from category theory. To put these ideas into practice, I also present `plotscaper`, an R package developed to refine these theoretical ideas and offer a practical tool for interactive data exploration. My goal is to demonstrate that, to design truly robust and consistent interactive data visualization systems, we need to ground our thinking in algebraic concepts.
+In this thesis, I argue that the independence model, despite many advantages, is fundamentally inadequate for comprehensively modeling graphics - visualization components are not independent, but instead deeply interconnected, particularly when interaction comes into play. Throughout this work, I explore this interconnectedness, the challenges is poses for interactive data visualization systems, and propose an alternative model based on some fundamental concepts from category theory. To put these ideas into practice, I also present `plotscaper`, an R package developed to refine these theoretical ideas and offer a practical tool for interactive data exploration. My goal is to demonstrate that, to build truly robust and consistent interactive data visualization systems, we may benefit from grounding our thinking in algebraic concepts.
 
 ```{r}
 #| echo: false
@@ -92,6 +93,20 @@ knitr::opts_chunk$set(
 
 <!--chapter:end:index.Rmd-->
 
+# Acknowledgements
+
+Being able to work on this thesis has been a real privilege, a jouney possible only through the immense support of many individuals. I would, therefore, like to take a moment to express my gratitude to all of them.
+
+To my primary supervisor, Simon, thank you for the countless hours spent mentoring and challenging me, for opening my eyes to new ideas, and for helping me turn them into reality. Your support as both a mentor and a friend has been invaluable. To my co-supervisor Paul, I am equally grateful for providing me with your expertise and your time, despite me not being your primary student. I could not have asked for better supervision. 
+
+I also want to thank my family and friends. To my amazing partner, Nela, thank you for standing by me, for bringing much joy and encouragement, and for putting up with me even during the most demanding times. To my family - especially my grandmother Alena, my mom Monika, my dad Ladislav, and my uncle Petr - thank you, thank you for supporting me, and being a source of strength and stability during all this time. To my friends, thank you for providing the much-needed distractions which helped to keep me balanced and on-task.
+
+Finally, I want to express gratitude to the University of Auckland, for their financial support and for giving me the opportunity to join their excellent research community for a time. A special thank you goes to the Department of Statistics, for fostering a welcoming environment and introducing me to many wonderful people, faculty and fellow students alike. I will never forget my time at UoA. Last but not least, I would also like to thank Simon's former supervisor, Antony, for making the time for me and sharing his many invaluable insights on the nature and history of interactive graphics.
+
+These individuals, and many others, have helped me become a better version of myself over the past few years, enabling me to achieve something I never could have done on my own. For that, I will always be immensely grateful.
+
+<!--chapter:end:acknowledgements.Rmd-->
+
 # Introduction {#introduction}
 
 > It’s written here: "In the Beginning was the Word!" <br>
@@ -102,21 +117,21 @@ knitr::opts_chunk$set(
 >
 > Faust, Part I, Johann Wolfgang von Goethe [-@goethe2015]
 
-Humans are intensely visual creatures. About 20-30% of our brain is involved in visual processing [@van2003; @sheth2016], providing support for a highly sophisticated and powerful visual system [see e.g. @goebel2004; @knudsen2020; for a brief review, see @ware2019], which in turn enables us to perform some remarkable perceptual feats. For instance, it is well-established that our brain can process certain highly salient visual stimuli in sub-20-millisecond times, outside of conscious attention [@ledoux2000; @ledoux2003], and that we can make extremely rapid, accurate, and parallel visual judgements, through phenomena known as subitizing and pre-attentive processing [@mandler1982; @treisman1985]. Features such as these establish the visual system as the most potent information channel at our disposal.
+Humans are intensely visual creatures. About 20-30% of our brain is involved in visual processing [@van2003; @sheth2016], supporting a highly sophisticated and powerful visual system [see e.g. @goebel2004; @knudsen2020; for a brief review, see @ware2019]. This in turn enables us to perform some remarkable perceptual feats. For instance, it is well-established that our brain can process certain highly salient visual stimuli in sub-20-millisecond times, outside of conscious attention [@ledoux2000; @ledoux2003], and that we can make extremely rapid, accurate, and parallel visual judgements, through phenomena known as subitizing and pre-attentive processing [@mandler1982; @treisman1985]. Features such as these establish the visual system as the most potent information channel we have at our disposal.
 
-Crucially, while the visual cortex excels at processing data about the natural world, it is equally adept at processing abstract information. Statisticians have long capitalized on this fact. Emerging from early charts and maps, data visualization has co-evolved alongside mathematical statistics, providing a complementary set of tools and methods [for a review, see @friendly2006 or Section \@ref(brief-history)]. Specifically, while mathematical statistics was primarily developed with the goal of supporting or disproving scientific hypotheses, data visualization offered an alternative approach: unsupervised exploration. Rather than providing answers to binary decisions, it demonstrated its worth in "forcing us to notice that which we would never expect to see" [@tukey1977]. This invaluable role in revealing the unexpected eventually established data visualization as an indispensable part of the applied statistician's arsenal.
+Importantly, while the visual cortex excels at processing information about the natural world, it is also remarkably adept at handling abstract data as well - a fact statisticians have long capitalized on. Emerging from early charts and maps, data visualization has co-evolved alongside mathematical statistics, providing a complementary set of tools and methods [for a review, see @friendly2006 or Section \@ref(brief-history)]. Specifically, while mathematical statistics was primarily developed with the goal of supporting or disproving existing scientific hypotheses, data visualization offered an alternative: unsupervised exploration. Instead of providing binary answers, it demonstrated its worth in "forcing us to notice that which we would never expect to see" [@tukey1977]. This invaluable role in revealing the unexpected eventually established data visualization as an indispensable part of the applied statistician's arsenal.
 
-Our interaction with the natural world extends beyond sight, however. When we try to understand unknown objects, we do not just look; we also touch, manipulate, and probe. Consequently, within our brain, action and perception are not independent, but instead deeply interconnected, mutually reinforcing processes [see e.g. @dijkerman2007; @lederman2009]. As a consequence, the most effective learning strategies tend to involve "learning by doing"; passive observation is less effective [@hackathorn2011; @reese2011]. As the saying goes, seeing is believing, but how much is that belief really worth if you can't put your finger on it?
+Yet, despite the primacy of vision, our interaction with the natural world extends beyond sight. When we try to understand unknown objects, we do not just look; we also touch, manipulate, and probe. Consequently, within our brain, action and perception are deeply connected, mutually reinforcing processes [see e.g. @dijkerman2007; @lederman2009], and, as a consequence, effective learning strategies usually involve "learning by doing"; passive observation is less effective [@hackathorn2011; @reese2011]. As the saying goes, seeing is believing, but how much is that belief really worth if you can't put your finger on it?
 
-Naturally, statisticians would eventually come to exploit this connection between action and perception as well, just as they had done with visual perception alone. In the latter half of the twentieth century, the development of computer graphics, and interactive data visualization in particular, transformed the idea of "interrogating a chart" from a mere turn of phrase into tangible reality. Suddenly, users could directly manipulate the visual representation of the data in real time, uncovering new insights with a keystroke or a mouse click.
+Naturally, statisticians would eventually come to exploit this connection between action and perception as well. In the latter half of the twentieth century, the development of computer graphics and interactive data visualization transformed the idea of "interrogating a chart" from a mere turn of phrase into tangible reality. Suddenly, users could directly manipulate the visual representation of the data in real time, uncovering new insights with a keystroke or a mouse click.
 
-The power of interactive data visualization quickly established it as one of the most popular ways of presenting data. Today, interactive graphics make frequent appearance in online news articles, on government websites, and in commercial dashboards. Similarly, data science developer ecosystems are flush with software for creating interactive graphics. Thus, given its ubiquity, it may seem as though interactive data visualization is a "solved problem".
+The power of interactive data visualization quickly established it as one of the most popular ways of presenting data. Today, interactive graphics make frequent appearance in online news articles, on government websites, and in commercial dashboards, and data-science-adjacent developer ecosystems are flush with software for building and deploying interactive visualizations. Thus, given its ubiquity, it may seem as though interactive data visualization is a "solved problem".
 
-Yet, a number of issues surrounding the use and understanding of interactive visualizations remain. While interactive visualizations are indeed popular in large organizations, individual analysts rarely integrate them into their workflows [see e.g. @batch2017]. Further, despite years of research and development, only a small fraction of sophisticated interactive features have made it into the widely available software (see Section \@ref(background)). Finally, a core underlying issue that is yet to be resolved is that of data pipelines: how do we go about modeling the process of transforming raw data into something that can be interactively visualized, in a simple and efficient manner [see e.g. @wickham2009; @vanderplas2020]?
+Yet, a number of issues surrounding the use and understanding of interactive visualizations remain. While interactive visualizations are indeed popular in large organizations, individual analysts rarely integrate them into their workflows [see e.g. @batch2017]. Further, despite years of research and development, only a small fraction of the more sophisticated interactive features make it into the widely available software (see Section \@ref(background)). Finally, a core underlying issue that is yet to be resolved is that of data pipelines: how do we go about modeling the process of transforming raw data into something that can be interactively visualized, in a simple and efficient manner [see e.g. @wickham2009; @vanderplas2020]?
 
-In this thesis, I explore the challenges that come up when developing interactive data visualization systems. A recurring theme will be that, although plots are visual entities composed of geometric objects, they are not mere pictures. Instead, they contain a significant amount of implicit, algebraic structure. This underlying structure dictates how plots can be manipulated, a fact that becomes particularly evident when interaction is introduced. 
+In this thesis, I explore the challenges that come up when developing interactive data visualization systems. A recurring theme will be that plots, despite being visual entities composed of geometric objects, are more than just pictures. Instead, they possess a significant amount of implicit, algebraic structure which dictates how they can be created and manipulated. This underlying structure becomes particularly critical when interaction is introduced.
 
-By focusing on this underlying algebraic foundation, I build upon the work of Leland Wilkinson, and the Grammar of Graphics (GoG) model in particular [-@wilkinson2012]. However, I contend that while GoG offers a foundational framework, it may require certain refinements to fully encompass the scope of interactive graphics. To illustrate the point bluntly, consider the following two quotes:
+By focusing on this underlying algebraic foundation, I build upon the work of Leland Wilkinson, and the Grammar of Graphics (GoG) model in particular [-@wilkinson2012]. However, I contend that GoG, while a foundational model, contains certain gaps that complicate reasoning about graphics, especially under interaction. To illustrate the point rather bluntly, consider the following two quotes:
 
 > "This system cannot produce a meaningless graphic, however. This is a strong claim, vulnerable to a single counter-example. It is a claim based on the formal rules of the system, however, not on the evaluation of specific graphics it may produce."
 >
@@ -124,9 +139,9 @@ By focusing on this underlying algebraic foundation, I build upon the work of Le
 >
 > @wilkinson2012, pp. 15 and 112
 
-What makes some combinations of graphics and statistics meaningful, while others degenerate or bizarre? I believe that answering this question is essential for building coherent data visualization systems, particularly ones involving interaction. Statistics may be a somewhat overlooked component of the GoG model^[See also the following quote: "I have tried to build the argument, except for the statistical methods in Chapter 7, from elementary definitions.", pp. 10 of the first-edition preface.]. Yet, I contend that, when developing interactive data visualizations, grappling with the properties of statistics underlying our plots is absolutely essential.
+What makes some combinations of graphics and statistics meaningful, while others degenerate or bizarre? I believe that answering this question is essential for building coherent data visualization systems, particularly ones involving interaction. Arguably, statistics may be a somewhat overlooked component of the GoG model^[See also the following quote: "I have tried to build the argument, except for the statistical methods in Chapter 7, from elementary definitions.", pp. 10 of the first-edition preface.]. Yet, I contend that, when developing interactive data visualizations, grappling with the properties of statistics underlying our plots is just as essential as understanding any other component.
 
-The main thrust of my argument is: what we can *do* with a graphic is fundamentally determined what the graphic *is*. Like geometric objects and scales, summary statistics are essential components of plots. When we consider all these together, distinct patterns emerge. Some types of plots exhibit a special kind of congruence between data, summary statistics, and visuals, which ensures predictable behavior under interaction. Other plots break this congruence, making certain interactive features brittle or difficult to implement. I explore this congruence and lack thereof throughout this thesis. Further, to describe it formally, I propose a simple model leveraging some fundamental algebraic concepts from category theory [see e.g. @fong2019]. My application of these concepts extends beyond the GoG [@wilkinson2012]. Specifically, in contrast to the GoG approach which treats data, statistics, and graphics as entirely independent, modular components, I propose an alternative, compositional model which focuses on preserving key mathematical properties.
+The main thrust of my argument is this: what we can *do* with a graphic is fundamentally determined what the graphic *is*. Like geometric objects and scales, summary statistics are essential components of plots. When we consider all these together, distinct patterns emerge. Some types of plots exhibit a special congruence between data, summary statistics, and visuals, which ensures predictable behavior under interaction. Other plots break this congruence, making certain interactive features brittle or difficult to implement. I explore this congruence and lack thereof throughout this thesis. Further, to describe it formally, I propose a simple model leveraging some fundamental algebraic concepts from category theory [see e.g. @fong2019]. My application of these concepts extends beyond the GoG [@wilkinson2012]. Specifically, in contrast to the GoG approach which treats data, statistics, and graphics as entirely independent, modular components, I propose an alternative, compositional model which focuses on preserving key mathematical properties.
 
 Finally, since interactive data visualization is first and foremost an applied discipline, all this theoretical work would be meaningless if it did not lead to practical, actionable insights. Therefore, to validate and refine these theoretical findings, I also develop an original open-source interactive data visualization library, `plotscaper` (https://github.com/bartonicek/plotscaper). Consequently, parts of this thesis are dedicated to the design and architecture of this system, as well as its application to real-world data. Throughout these sections, I repeatedly explore and elaborate on the links between the underlying mathematics and the practical concerns that arise when building interactive data visualization systems. 
 
