--- a/acknowledgements.Rmd
+++ b/acknowledgements.Rmd
@@ -1,11 +1,11 @@
 # Acknowledgements
 
-Being able to work on this thesis has been a privilege, however, one which would not have been possible without the immense support of many individuals. I would, therefore, like to take the time to thank them all.
+Being able to work on this thesis has been a real privilege, a jouney possible only through the immense support of many individuals. I would, therefore, like to take a moment to express my gratitude to all of them.
 
 To my primary supervisor, Simon, thank you for the countless hours spent mentoring and challenging me, for opening my eyes to new ideas, and for helping me turn them into reality. Your support as both a mentor and a friend has been invaluable. To my co-supervisor Paul, I am equally grateful for providing me with your expertise and your time, despite me not being your primary student. I could not have asked for better supervision. 
 
-I also want to thank my family and friends. To my my amazing partner, Nela, thank you for your encouragement, and for putting up with me even during the most demanding times. To my family, especially my grandmother Alena, my mom Monika, my dad Ladislav, and my uncle Petr, thank you, thank you for providing a supportive environment, and for being a source of stability and strength during all this time. To my friends, thank you for providing the much-needed distractions and moments relaxation which helped to keep me balanced and on-task.   
+I also want to thank my family and friends. To my amazing partner, Nela, thank you for standing by me, for bringing much joy and encouragement, and for putting up with me even during the most demanding times. To my family - especially my grandmother Alena, my mom Monika, my dad Ladislav, and my uncle Petr - thank you, thank you for supporting me, and being a source of strength and stability during all this time. To my friends, thank you for providing the much-needed distractions which helped to keep me balanced and on-task.
 
-Finally, I would like to thank the University of Auckland for their financial support, and, in general, for fostering an excellent research community. I would also like to give a special thank you to the Department of Statistics, for providing a welcoming home-base, and to the many warm and inspiring individuals - faculty and fellow students alike - that I had the pleasure to meet there. Last but not least, I would also like to thank Simon's former supervisor, Antony, for making the time and providing me with some excellent guidance.
+Finally, I want to express gratitude to the University of Auckland, for their financial support and for giving me the opportunity to join their excellent research community for a time. A special thank you goes to the Department of Statistics, for fostering a welcoming environment and introducing me to many wonderful people, faculty and fellow students alike. I will never forget my time at UoA. Last but not least, I would also like to thank Simon's former supervisor, Antony, for making the time for me and sharing his many invaluable insights on the nature and history of interactive graphics.
 
-All of these individuals, and many more, have, over the last few years, allowed me to become a better version of myself, and do something I never could have done alone. For this, I will always be immensely grateful.
+These individuals, and many others, have helped me become a better version of myself over the past few years, enabling me to achieve something I never could have done on my own. For that, I will always be immensely grateful.
